--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,5 @@ BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend"
 BBFILE_COLLECTIONS += "meta-nymea"
 BBFILE_PATTERN_meta-nymea := "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-nymea = "10"
+
+LICENSE_PATH += "${LAYERDIR}/licenses"
