Add more plugins

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "meta-nymea"
 BBFILE_PATTERN_meta-nymea := "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-nymea = "10"
 
-LAYERDEPENDS_meta-nymea += "openembedded-layer"
+LAYERDEPENDS_meta-nymea += "meta-openembedded/meta-oe"
 
 LAYERSERIES_COMPAT_meta-nymea = "dunfell kirkstone"
 
