Update to nymea 1.9.0

--- a/srcrevs.conf
+++ b/srcrevs.conf
@@ -1,9 +1,15 @@
 libnymea-networkmanager
+nymea-app
 nymead
+nymea-experience-plugin-energy
+nymea-gpio
 nymea-mqtt
 nymea-plugins
+nymea-plugins-genericthings
+nymea-plugins-modbus
+nymea-plugins-zigbee
 nymea-remoteproxy
+nymea-system-plugin-systemd
 nymea-zeroconf-plugin-avahi
 nymea-zeroconf-plugin-dnssd
 nymea-zigbee
-nymea-app
