--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,7 +5,7 @@ BBPATH := "${LAYERDIR}:${BBPATH}"
 # We have a recipes directory, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "meta-nymea"
+BBFILE_COLLECTIONS += "nymea"
 BBFILE_PATTERN_meta-nymea := "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-nymea = "10"
 
