--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -6,11 +6,11 @@ BBPATH := "${LAYERDIR}:${BBPATH}"
 BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "nymea"
-BBFILE_PATTERN_meta-nymea := "^${LAYERDIR}/"
-BBFILE_PRIORITY_meta-nymea = "10"
+BBFILE_PATTERN_nymea := "^${LAYERDIR}/"
+BBFILE_PRIORITY_nymea = "10"
 
-LAYERDEPENDS_meta-nymea += "openembedded-layer"
+LAYERDEPENDS_nymea += "openembedded-layer"
 
-LAYERSERIES_COMPAT_meta-nymea = "dunfell kirkstone"
+LAYERSERIES_COMPAT_nymea = "kirkstone"
 
 LICENSE_PATH += "${LAYERDIR}/licenses"
